istio/deployment/api-gateway-istio-prod.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: api-gateway
  name: api-gateway
spec:
  replicas: 1
  revisionHistoryLimit: 10
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: api-gateway
        deploymentconfig: api-gateway
        version: v1
    spec:
      containers:
      - name: api-gateway
        image: docker-registry.default.svc:5000/amazin-dev/api-gateway:0.0.1-SNAPSHOT
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false

---
kind: Service
apiVersion: v1
metadata:
  name: api-gateway
  labels:
    app: api-gateway
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: api-gateway
  type: ClusterIP
  sessionAffinity: None

---
apiVersion: v1
kind: Route
metadata:
  labels:
    app: api-gateway
  name: api-gateway
spec:
  host: api-gateway.amazin.apps.ocp.datr.eu
  port:
    targetPort: 8080
  to:
    kind: Service
    name: api-gateway
    weight: 100
  wildcardPolicy: None
